--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "main": "platform",
   "scripts": {
-    "start": "NODE_PATH=. DEVELOPMENT=true nodemon app",
+    "start": "NODE_PATH=. DEVELOPMENT=true nodemon --inspect app",
     "test": "mocha --exit"
   },
   "author": "Eugene Ghanizadeh Khoub",
